--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "MERN Stack College Management System",
   "main": "index.js",
+  "bin": "index.js", 
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "seed": "node admin-seeder.js"
   },
-  "author": "Krish Jotaniya",
+  "author": "Bittu Pathania",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
@@ -24,5 +25,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "nodemon": "^2.0.21"
-  }
+  },
+  "pkg": {
+  "scripts": "./server.js",
+  "assets": [
+    "build/**/*",
+    ".env"
+  ]
+}
 }
